--- a/src/general.pcss
+++ b/src/general.pcss
@@ -374,7 +374,7 @@ h1 {
     font-size: 52px;
   }
   @media (--tabletport) {
-    font-size: 52px;
+    font-size: 45px;
   }
   @media (--tabletland) {
     font-size: 45px;
@@ -395,7 +395,7 @@ h5 {
     font-size: 20px;
   }
   @media (--tabletport) {
-    font-size: 20px;
+    font-size: 18px;
   }
   @media (--tabletland) {
     font-size: 19px;
@@ -439,8 +439,8 @@ p {
     line-height: 26px;
   }
   @media (--tabletport) {
-    font-size: 16px;
-    line-height: 26px;
+    font-size: 14px;
+    line-height: 24px;
   }
   @media (--tabletland) {
     font-size: 15px;
@@ -802,14 +802,13 @@ img {
     padding: 14px 10px;
   }
   @media (--tabletport) {
-    font-size: 18px;
-    width: calc(100% - 20px);
-    padding: 14px 10px;
+    font-size: 16px;
+    width: 100%;
+    padding: 13px 10px;
   }
   @media (--tabletland) {
     font-size: 17px;
     width: calc(100% - 20px);
-    padding: 13px 10px;
   }
   @media (--desktop) {
     font-size: 18px;
