Single page adapt to mobile screen.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -371,16 +371,16 @@ h1 {
   letter-spacing: 0;
   margin: 0;
   @media (--mobile) {
-    font-size: 52px;
+    font-size: 43px;
+    line-height: 43px;
   }
   @media (--tabletport) {
     font-size: 45px;
-  }
-  @media (--tabletland) {
-    font-size: 45px;
+    line-height: 45px;
   }
   @media (--desktop) {
     font-size: 52px;
+    line-height: 52px;
   }
 }
 h5 {
@@ -392,9 +392,6 @@ h5 {
   letter-spacing: 0;
   margin: 0;
   @media (--mobile) {
-    font-size: 20px;
-  }
-  @media (--tabletport) {
     font-size: 18px;
   }
   @media (--tabletland) {
@@ -797,13 +794,12 @@ img {
   text-decoration: none;
   transition: var(--animacion);
   @media (--mobile) {
-    font-size: 18px;
-    width: calc(100% - 20px);
-    padding: 14px 10px;
+    font-size: 15px;
+    width: 100%;
+    padding: 12px 10px;
   }
   @media (--tabletport) {
     font-size: 16px;
-    width: 100%;
     padding: 13px 10px;
   }
   @media (--tabletland) {
