Init front developer shopping cart.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -1259,6 +1259,20 @@ img {
   @media (--desktop) {
     height: 400px;
   }
+  &.margin {
+    @media (--mobile) {
+      margin: 136px 0 0;
+    }
+    @media (--tabletport) {
+      margin: 249px 0 0;
+    }
+    @media (--tabletland) {
+      margin: 274px 0 0;
+    }
+    @media (--desktop) {
+      margin: 299px 0 0;
+    }
+  }
   &:before {
     content: '';
     display: block;
