--- a/src/shopping_cart.pcss
+++ b/src/shopping_cart.pcss
@@ -2,5 +2,118 @@
 #section_shopping_cart {
   float: left;
   width: 100vw;
+  padding: 80px 0;
+}
+#list_product_shop {
+  lost-column: 8/12;
+  .top {
+    float: left;
+    width: 100%;
+    border-bottom: 1px solid var(--dorado);
+    .tittle {
+      float: left;
+      width: 100%;
+      font-weight: var(--black);
+      font-size: 14px;
+      color: var(--dorado);
+      letter-spacing: 0;
+      line-height: 0.8;
+      text-transform: uppercase;
+      text-align: left;
+    }
+  }
+  .result {
+    float: left;
+    width: 100%;
+    padding: 20px 0;
+    border-bottom: 1px solid var(--grisclaro);
+    .box {
+      min-height: 120px;
+      display: table;
+    }
+  }
+  .box {
+    lost-column: 1/6;
+  }
+  .product {
+    float: left;
+    width: 100%;
+  }
+  .vertical {
+    display: table-cell;
+    vertical-align: middle;
+  }
+  .name {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    font-weight: var(--regular);
+    font-size: 16px;
+    color: var(--negro);
+    letter-spacing: 0;
+    line-height: 26px;
+  }
+  .price {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    font-weight: var(--regular);
+    font-size: 16px;
+    color: var(--dorado);
+    letter-spacing: 0;
+    line-height: 26px;
+  }
+  input {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 23px;
+    border: 1px solid var(--grisclaro);
+    padding: 0;
+    font-weight: var(--regular);
+    font-size: 14px;
+    color: var(--gris);
+    letter-spacing: 0;
+    text-align: center;
+    outline: none;
+    transition: var(--animacion);
+    &::placeholder {
+      font-weight: var(--regular);
+      font-size: 14px;
+      color: var(--gris);
+    }
+    &:focus {
+      border: 1px solid var(--dorado);
+    }
+  }
+  .total {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    font-weight: var(--black);
+    font-size: 16px;
+    color: var(--dorado);
+    letter-spacing: 0;
+    line-height: 26px;
+  }
+}
+.btn_tash {
+  display: block;
+  cursor: pointer;
+  display: table-cell;
+  vertical-align: middle;
+  border: 0 none;
+  background: none;
+  padding: 0;
+  width: 30px;
+  transition: var(--animacion);
+  &:hover {
+    @media (--tabletland) {
+      opacity: 0.5;
+    }
+  }
+}
+#sidebar {
+  lost-column: 4/12;
 }
 /* END SHOPPING CART */
