Front visual solution to Shopping Cart, tabletland screen.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -388,13 +388,27 @@ h4 {
   width: 100%;
   font-family: var(--font2);
   font-weight: var(--regular);
-  font-size: 25px;
   line-height: 0.8;
   color: var(--dorado);
   letter-spacing: 0;
   margin: 0;
-  padding: 0 0 20px;
   border-bottom: 1px solid var(--dorado);
+  @media (--mobile) {
+    font-size: 25px;
+    padding: 0 0 20px;
+  }
+  @media (--tabletport) {
+    font-size: 25px;
+    padding: 0 0 20px;
+  }
+  @media (--tabletland) {
+    font-size: 24px;
+    padding: 0 0 18px;
+  }
+  @media (--desktop) {
+    font-size: 25px;
+    padding: 0 0 20px;
+  }
 }
 h5 {
   float: left;
