--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -76,6 +76,9 @@
 }
 
 @define-mixin ShoppingCartText {
+  width: 100%;
+  letter-spacing: 0;
+  vertical-align: middle;
   @media (--mobile) {
     font-size: 16px;
     line-height: 26px;
