--- a/src/shopping_cart.pcss
+++ b/src/shopping_cart.pcss
@@ -36,9 +36,20 @@
   .result {
     float: left;
     width: 100%;
-    padding: 20px 0;
     border-bottom: 1px solid var(--grisclaro);
     transition: var(--animacion);
+    @media (--mobile) {
+      padding: 20px 0;
+    }
+    @media (--tabletport) {
+      padding: 20px 0;
+    }
+    @media (--tabletland) {
+      padding: 19px 0;
+    }
+    @media (--desktop) {
+      padding: 20px 0;
+    }
     &:nth-last-child(2) {
       border-bottom: 0 none;
     }
@@ -89,20 +100,14 @@
   }
   .name {
     display: table-cell;
-    vertical-align: middle;
-    width: 100%;
     font-weight: var(--regular);
     color: var(--negro);
-    letter-spacing: 0;
     @mixin ShoppingCartText {};
   }
   .price {
     display: table-cell;
-    vertical-align: middle;
-    width: 100%;
     font-weight: var(--regular);
     color: var(--dorado);
-    letter-spacing: 0;
     @mixin ShoppingCartText {};
   }
   input {
@@ -130,11 +135,8 @@
   }
   .total {
     display: table-cell;
-    vertical-align: middle;
-    width: 100%;
     font-weight: var(--black);
     color: var(--dorado);
-    letter-spacing: 0;
     @mixin ShoppingCartText {};
   }
 }
@@ -193,7 +195,18 @@
 #box_basket_total {
   float: left;
   width: 100%;
-  margin: 80px 0 0;
+  @media (--mobile) {
+    margin: 80px 0 0;
+  }
+  @media (--tabletport) {
+    margin: 80px 0 0;
+  }
+  @media (--tabletland) {
+    margin: 70px 0 0;
+  }
+  @media (--desktop) {
+    margin: 80px 0 0;
+  }
   .box {
     display: inline !important;
     min-height: inherit !important;
@@ -226,19 +239,42 @@
     width: 100%;
   }
   h5 {
-    /* Type here: */
     font-family: var(--font2);
     font-weight: var(--regular);
-    font-size: 25px;
     color: var(--negro);
     letter-spacing: 0;
     border-bottom: 1px solid var(--negro);
-    margin: 0 0 20px;
-    padding: 0 0 10px;
+    @media (--mobile) {
+      font-size: 25px;
+      margin: 0 0 20px;
+      padding: 0 0 10px;
+    }
+    @media (--tabletport) {
+      font-size: 25px;
+      margin: 0 0 20px;
+      padding: 0 0 10px;
+    }
+    @media (--tabletland) {
+      font-size: 24px;
+      margin: 0 0 18px;
+      padding: 0 0 10px;
+    }
+    @media (--desktop) {
+      font-size: 25px;
+      margin: 0 0 20px;
+      padding: 0 0 10px;
+    }
   }
   .product_single_element {
     margin-left: 0;
+    margin-bottom: 20px;
     lost-column: 1/2;
+    &:hover {
+      @media (--tabletland) {
+        transform: scale(1);
+        filter: grayscale();
+      }
+    }
   }
 }
 /* END SHOPPING CART */
