--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -49,14 +49,12 @@
   text-decoration: none;
   transition: var(--animacion);
   @media (--mobile) {
-    font-size: 16px;
-    width: 120px;
-    padding: 13px 10px 14px;
+    font-size: 14px;
+    width: 100%;
+    padding: 12px 10px 13px;
   }
   @media (--tabletport) {
-    font-size: 14px;
     width: 120px;
-    padding: 12px 10px 13px;
   }
   @media (--tabletland) {
     font-size: 15px;
@@ -78,12 +76,8 @@
   letter-spacing: 0;
   vertical-align: middle;
   @media (--mobile) {
-    font-size: 16px;
-    line-height: 26px;
-  }
-  @media (--tabletport) {
     font-size: 14px;
-    line-height: 20px;
+    line-height: 24px;
   }
   @media (--tabletland) {
     font-size: 15px;
