Init checkout page. Optimized top banner or section margin size whit mixin.

--- a/src/general.pcss
+++ b/src/general.pcss
@@ -1150,19 +1150,12 @@ img {
   float: left;
   width: 100vw;
   background: var(--dorado);
+  @mixin MarginTopSection {};
   @media (--mobile) {
     padding: 5px 0;
-    margin: 136px 0 0;
   }
   @media (--tabletport) {
     padding: 10px 0;
-    margin: 249px 0 0;
-  }
-  @media (--tabletland) {
-    margin: 274px 0 0;
-  }
-  @media (--desktop) {
-    margin: 299px 0 0;
   }
   ul {
     float: left;
@@ -1257,18 +1250,7 @@ img {
     height: 400px;
   }
   &.margin {
-    @media (--mobile) {
-      margin: 136px 0 0;
-    }
-    @media (--tabletport) {
-      margin: 249px 0 0;
-    }
-    @media (--tabletland) {
-      margin: 274px 0 0;
-    }
-    @media (--desktop) {
-      margin: 299px 0 0;
-    }
+    @mixin MarginTopSection {};
   }
   &:before {
     content: '';
