--- a/src/home.pcss
+++ b/src/home.pcss
@@ -118,19 +118,8 @@
 }
 #banner_home {
   float: left;
-  width: 100vw;
-  @media (--mobile) {
-    margin: 136px 0 0;
-  }
-  @media (--tabletport) {
-    margin: 249px 0 0;
-  }
-  @media (--tabletland) {
-    margin: 274px 0 0;
-  }
-  @media (--desktop) {
-    margin: 299px 0 0;
-  }
+  width: 100vw;@mixin MarginTopSection {};
+
   .slide {
     float: left;
     width: 100%;
