--- a/src/shopping_cart.pcss
+++ b/src/shopping_cart.pcss
@@ -11,6 +11,9 @@
   @media (--tabletland) {
     padding: 80px 0;
   }
+  &.margin {
+    @mixin MarginTopSection {};
+  }
 }
 #list_product_shop {
   @media (--mobile) {
