--- a/src/variables.pcss
+++ b/src/variables.pcss
@@ -33,6 +33,21 @@
 @custom-media --desktop (min-width: 1200px);
 @custom-media --retina (-webkit-min-device-pixel-ratio: 2);
 
+@define-mixin MarginTopSection {
+  @media (--mobile) {
+    margin: 136px 0 0;
+  }
+  @media (--tabletport) {
+    margin: 249px 0 0;
+  }
+  @media (--tabletland) {
+    margin: 274px 0 0;
+  }
+  @media (--desktop) {
+    margin: 299px 0 0;
+  }
+}
+
 @define-mixin BtnSmall $Color , $Bg , $ColorHover , $BgHover{
   display: block;
   cursor: pointer;
