--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -1,2 +1,125 @@
 /* BEGIN CHECKOUT */
+#box_checkout {
+  margin-top: 7px;
+  @media (--mobile) {
+    lost-column: 1/1;
+  }
+  @media (--tabletland) {
+    lost-column: 8/12;
+  }
+  h4 {
+    padding: 0 0 16px;
+  }
+}
+#box_coupon {
+  cursor: pointer;
+  float: left;
+  width: calc(100% - 40px);
+  padding: 15px 20px;
+  margin: 90px 0 50px;
+  background: var(--dorado);
+  b {
+    float: left;
+    width: 100%;
+    font-weight: var(--black);
+    font-size: 16px;
+    color: var(--blanco);
+    letter-spacing: 0;
+    line-height: 26px;
+  }
+}
+#box_insourance {
+  float: left;
+  width: 100%;
+  margin: 0 0 50px;
+  input {
+    float: left;
+    width: 12px;
+    margin: 7px 10px 0 0;
+  }
+  p {
+    float: left;
+    width: calc(100% - 12px - 10px);
+  }
+}
+#box_billing_detail {
+  float: left;
+  width: 100%;
+  .box {
+    lost-column: 1/2;
+  }
+  h4 {
+    margin: 0 0 20px;
+  }
+}
+.box_input {
+  float: left;
+  width: 100%;
+  margin: 0 0 20px;
+  label {
+    float: left;
+    width: 100%;
+    font-weight: var(--light);
+    font-size: 16px;
+    line-height: 0.8;
+    color: var(--grismedio);
+    letter-spacing: 0;
+    margin: 0 0 10px;
+  }
+  input {
+    float: left;
+    width: 100%;
+    padding: 0 0 12px;
+    font-size: 16px;
+    line-height: 0.8;
+    color: var(--gris);
+    font-weight: var(--light);
+    letter-spacing: 0;
+    border: 0 none;
+    border-bottom: 1px solid var(--grisclaro);
+    outline: none;
+    transition: var(--animacion);
+    &::placeholder {
+      font-size: 16px;
+      line-height: 26px;
+      color: var(--gris);
+      transition: var(--animacion);
+    }
+    &:focus {
+      color: var(--negro);
+      border-bottom: 1px solid var(--naranja);
+      &::placeholder {
+        color: var(--negro);
+      }
+    }
+  }
+  .select {
+    cursor: pointer;
+    float: left;
+    width: 100%;
+    position: relative;
+    padding: 0 0 12px;
+    font-size: 16px;
+    line-height: 0.8;
+    color: var(--gris);
+    font-weight: var(--light);
+    letter-spacing: 0;
+    border: 0 none;
+    border-bottom: 1px solid var(--grisclaro);
+    outline: none;
+    transition: var(--animacion);
+    &:hover {
+      @media (--tabletland) {
+        color: var(--negro);
+        border-bottom: 1px solid var(--naranja);
+      }
+    }
+    img {
+      position: absolute;
+      right: 0;
+      top: 3px;
+      width: 10px;
+    }
+  }
+}
 /* END CHECKOUT */
