--- a/src/checkout.pcss
+++ b/src/checkout.pcss
@@ -45,6 +45,7 @@
 #box_billing_detail {
   float: left;
   width: 100%;
+  margin:  0 0 50px;
   .box {
     lost-column: 1/2;
   }
@@ -120,6 +121,28 @@
       top: 3px;
       width: 10px;
     }
+  }
+}
+#box_difderent_address {
+  float: left;
+  width: 100%;
+  button {
+    float: left;
+    width: 100%;
+    border: 0 none;
+    background: none;
+    padding: 0;
+    text-align: left;
+    position: relative;
+    outline: none;
+  }
+  input {
+    position: absolute;
+    right: 0;
+    top: 5px;
+  }
+  h4 {
+    border-bottom: 1px solid var(--negro);
   }
 }
 /* END CHECKOUT */
